[package]
name = "jlang-rs-gd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.11"
# jlang = { git = "https://github.com/tangentstorm/jlang-rs" }
jlang = { path='../jlang-rs' }
