[package]
name = "jlang-rs-gd"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
jlang = { git = "https://github.com/tangentstorm/jlang-rs" }
#jlang = { path='../jlang-rs' }
